--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -41,3 +41,11 @@
     background-color: rgba(255, 255, 255, 0.1) !important;
     color: white !important;
 }
+.custom-title {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 800; /* bold */
+    font-size: 20px;  /* bisa disesuaikan */
+    color: #491668;      /* bisa diganti sesuai selera */
+    margin-bottom: 20px;
+}
+
